--- a/style.css
+++ b/style.css
@@ -93,6 +93,17 @@
     height: 2px;
     background: #ee00ff;
   }
+
+  .service-select {
+    background: #2e2e2e;
+    color: #fff;
+    border: 2px solid #ee00ff;
+    border-radius: 8px;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    width: 100%;
+  }  
   
   form input {
     width: 100%;
